Clean up Delta code a bit